<resources>
    <string name="app_name">Movie Streaming</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="top_imdb">Top IMDB</string>
    <string name="more">More ></string>
    <string name="new_movies">New Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="director">Director</string>
    <string name="budget">Budget</string>
    <string name="description">Description</string>
    <string name="cast">Cast</string>
    <string name="retry">Retry</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="there_is_no_movie">There is no movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>